feat: add postcss nested

--- a/src/Components/Card/card.module.css
+++ b/src/Components/Card/card.module.css
@@ -29,6 +29,10 @@
     background: none;
     border: solid 1px #1bff80;
     cursor: pointer;
+    
+    &:hover {
+        border: solid 1px red;
+    }
 }
 
 .button {
