--- a/src/Components/Wrapper/wrapper.module.css
+++ b/src/Components/Wrapper/wrapper.module.css
@@ -4,9 +4,9 @@
     #2f2f2d 8.29%,
     rgba(0, 0, 0, 0) 100%
   );
-  /* background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(29,29,29,1) 25%, rgba(61,60,60,1) 47%, rgba(29,29,29,1) 75%, rgba(0,0,0,1) 100%); */
   height: 100vh;
   position: relative;
+  animation: move 0.5s ease-out;
 }
 
 .lines {
@@ -26,4 +26,19 @@
   color: #1bff80;
   position: relative;
   z-index: 0;
+}
+
+@keyframes move {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(30vh);
+  }
+  75% {
+    transform: translateY(-5vh);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
