--- a/src/Components/CardContainer/Components/Card/card.module.css
+++ b/src/Components/CardContainer/Components/Card/card.module.css
@@ -1,10 +1,12 @@
 .grid {
   display: grid;
   grid-template-rows: auto;
+  justify-content: space-between;
+  align-items: start;
   grid-template-areas:
-    'title title'
-    'type edit'
-    'price button';
+    'title title title'
+    'type none edit'
+    'price none button';
 }
 
 .title {
@@ -13,20 +15,29 @@
 }
 
 .type {
+  font-weight: bold;
+  font-size: 10px;
   grid-area: type;
 }
 
 .price {
+  font-weight: bold;
+  font-size: 10px;
   grid-area: price;
   font-family: monospace;
 }
 
 .button,
 .edit {
+  font-weight: bold;
+  font-size: 10px;
+  width: 100px;
   color: #1bff80;
   background: none;
   border: solid 1px #1bff80;
   cursor: pointer;
+  border-radius: 2px;
+  margin: 2px 0;
 
   &:hover {
     opacity: 0.6;
